# fluor_tools

./: .gitignore  README.md  TODO.md  TRANSLATION_MAP.md  pyproject.toml  translate_all.py
.github/: copilot-instructions.md
Fluor-RLAT/: 02_property_prediction.py  03_file_merge.py  run.py  training.py
NIRFluor-opt and web/: app.py  processing.py  run.py
NIRFluor-opt and web/input/: target_m.csv
NIRFluor-opt and web/predict/: 01_data_preprocessing.py  02_property_prediction.py  03_file_merge.py  packaging.ipynb  run.py
NIRFluor-opt and web/predict/input/: input.csv  target.csv  target_smiles_morgan.csv  target_sol_morgan.csv
NIRFluor-opt and web/predict/result/: target_predictions.csv  target_predictions_abs.csv  target_predictions_em.csv  target_predictions_k.csv  target_predictions_plqy.csv
NIRFluor-opt and web/results/: H_replacement.csv  merged_file_pred.csv  new_m_replace.csv  new_molecules.csv  target_fragment.csv  target_rules.csv  transform_rules.csv  used_mapping_pairs.csv
colab_training/: Create_Training_Data.ipynb  Fluor_RLAT_Predict.ipynb  Fluor_RLAT_Training.ipynb  Fluor_RLAT_Training_AdamW_GradClip_CosineAnn_SMILE_Ann_BiggerModel.ipynb  Fluor_Unified.ipynb  How_to_use.md  README.md  pyproject.toml
colab_training/fluor_modules/: __init__.py  config.py  data_pipeline.py  models.py  prediction_engine.py  training_engine.py
colab_training/tests/: __init__.py  conftest.py  test_config.py  test_data_pipeline.py  test_models.py  test_prediction_engine.py  test_training_engine.py
figure_code/Figure_code_for_Fluor-opt/: Fluor-opt_figures_code.ipynb
figure_code/Figure_code_for_Fluor-opt/data/: 01.csv  03.csv  04.csv
figure_code/Figure_code_for_Fluor-pred/: Fluor-pred_figures_code.ipynb
figure_code/Figure_code_for_Fluor-pred/data/: 01_test_predictions_abs.csv  01_train_predictions_abs.csv  01_valid_predictions_abs.csv  02_ablation_data.csv  04_test_predictions_abs_nonLDS.csv  06_test_abs.csv
